--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>bootcamp2022</title>
 </head>
 <body>
-<h1>Hello World from Ubaid </h1>
+<h1>Hello World from Ubaid and his friends</h1>
 </body>
 </html>
