updated index.html file

--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <body>
 <h1>Hello World from Ubaid and his friends</h1>
 <h2>my name is UBAID</h2>
-<h3>azam</h3>
+<h3>azam bhutto</h3>
 </body>
 </html>
